<resources>
    <string name="app_name">BatallaNaval</string>
    <string name="usuario">Ingrese nombre de jugador</string>
    <string name="btnInicio">Iniciar juego</string>
    <string name="stringDificultad">Cambiar dificultad</string>
    <string name="nombreJugador">Jugador Nuevo</string>
    <string name="ayuda">Guia</string>
    <string-array name="select">
        <item>6X6</item>
        <item>8X8</item>
        <item>10X10</item>
    </string-array>
    <string name="btnAtras">Atras</string>
    <string name="leyendaGuia">Bienvenido a Mini Batalla Naval\n\n¿Como jugar? Mini Batalla Naval es
    un juego simple,donde tenes que hundir todos los barcos en la menor cantidad de movimientos
    ¡Selecciona un cuadrante y dispara! Si das en el blanco se cambiara a rojo y sino...agua(celeste)
    Podes en cualquier momento reiniciar el juego o volver al menu para cambiar la dificultad para mas emocion
    Si olvidas algun paso,podes consultar la guia en cualquier momento</string>
    //strings de la activity de juego
    <string name="aciertos">Aciertos: </string>
    <string name="barcosRestantes">"Barcos:  "</string>
    <string name="movimientos">"Jugadas: "</string>
    <string name="reinicio">Reiniciar</string>
    <string name="jugador">Jugador: </string>
    <string name="opcionesPopup">Opciones</string>
    <string name="volverAMenu">Menu principal</string>
    <string name="ganaste">¡Has hundido toda la flota!</string>
    <string name="titulo">Mini Batalla Naval</string>
    <string name="nombreAnonimo">Anónimo</string>
    <string name="barco">BARCO</string>
    <string name="agua">AGUA</string>
    <string name="fallos">Agua:</string>
    <string name="btnSalir">Salir</string>
    <string name="btnReiniciar">Reiniciar</string>
    <string name="tiempoLimite">Tiempo limite:</string>
    <string name="tituloGanaste">¡Ganaste!</string>
    <string name="tituloPerdiste">Perdiste :(</string>
    <string name="perdiste">No lograste hundir la flota a tiempo</string>
    <string name="mensajeNuevoRecord">¡Marcaste un nuevo record!</string>
    <string name="sinNombre">Ingresa un nombre de usuario para continuar</string>
    <string name="compartirResultado">Compartir</string>
    <string name="modoFacil">fácil</string>
    <string name="modoNormal">normal</string>
    <string name="modoDificil">difícil</string>
    <string name="puntuacionLograda1">" logró una nueva puntuación."</string>
    <string name="puntuacionLograda2">¡Terminó el juego en modo</string>
    <string name="puntuacionLograda3">" logrando "</string>
    <string name="puntuacionLograda4">" puntos!"</string>
    <string name="puntos">Puntos:</string>
    <string name="nombre">Jugador:</string>
    <string name="vacio">Vacío</string>
    <string name="textoRanking">Ranking de jugadores</string>
    <string name="dificultad">Dificultad:</string>
    <string name="btnAceptar">Aceptar</string>
</resources>