<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#80666600"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/textoRanking"
        android:gravity="center"/>
    <TextView
        android:id="@+id/dificultadRanking"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="#666600"
        android:id="@+id/ranking1"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="#666600"
        android:id="@+id/ranking2"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="#666600"
        android:id="@+id/ranking3"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="#666600"
        android:id="@+id/ranking4"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="#666600"
        android:id="@+id/ranking5"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dificultad"
        android:gravity="center"
        android:textSize="20dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="6X6"
                android:textSize="18sp"
                android:backgroundTint="#666600"
                android:textColor="@color/black"
                android:id="@+id/btn1"/>
            <Button
                android:text="8X8"
                android:textSize="18sp"
                android:backgroundTint="#666600"
                android:textColor="@color/black"
                android:id="@+id/btn2"/>
            <Button
                android:text="10X10"
                android:textSize="18sp"
                android:backgroundTint="#666600"
                android:textColor="@color/black"
                android:id="@+id/btn3"/>
        </TableRow>

    </TableLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAtras"
        android:backgroundTint="#666600"
        android:textColor="@color/black"
        android:id="@+id/btnAtrasRanking"/>
</LinearLayout>